--- a/index.html
+++ b/index.html
@@ -6,26 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/87a66ec4e9.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/87a66ec4e9.js"
+        crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
 <body>
 
     <nav>
-        <div class="logo"><i class="fa-sharp fa-solid fa-circle-info"
-                style="font-size: 2rem;"></i></div>
+        <div class="logo"><i class="fa-solid fa-truck">!</i></div>
         <ul class="nav-links">
-            <span><i class="fa-solid fa-school"></i></span>
-            <li><a href=""></i>Church</a></li>
-            <span><i class="fa-solid fa-video"></i></span>
-            <li><a href="">LiveStream</a></li>
-            <span><i class="fa-solid fa-user-graduate"></i></span>
-            <li><a href="#target">Testimony</a></li>
-            <span><i class="fa-solid fa-computer"></i></a>
-                </li></span>
-            <li><a href="">Download</a></li>
-            <span><i class="fa-solid fa-person-chalkboard"></i></a></span>
+            <a href="">
+                <span><i class="fa-solid fa-warehouse"></i></span>
+                <li></i>Vendors</li>
+            </a>
+
+            <a href="">
+                <span><i class="fa-solid fa-mobile"></i></span>
+                <li>FoodMe</li>
+            </a>
+
+            <a href="#target">
+                <span><i class="fa-solid fa-location-dot"></i></span>
+                <li>Map</li>
+            </a>
+
+            <a href="">
+                <span><i class="fa-solid fa-truck"></i>
+                </span>
+                <li>Dispatcher</li>
+            </a>
+
+            <a href="">
+                <span><i class="fa-solid fa-person-chalkboard"></i></span>  
+                <li>Review</li>
+            </a>
+
+            <a href="">
+               <input type="button" value="Apply">
+            </a>
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -36,8 +55,8 @@
     </nav>
 
 
-      
-        <script src="script.js"></script>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
