--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/87a66ec4e9.js"
         crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
+    <!-- Navbar  -->
 
     <nav>
         <div class="logo"><i class="fa-solid fa-truck">!</i></div>
@@ -45,7 +49,13 @@
             <a href="">
                <input type="button" value="Apply">
             </a>
+
+            <a href="" id="hello">
+                <li></i>Btc/Eth</li>
+            </a>
         </ul>
+
+        <!-- Bugg -->
         <div class="burger">
             <div class="line1"></div>
             <div class="line2"></div>
@@ -54,6 +64,13 @@
 
     </nav>
 
+    <!-- New line -->
+
+    <div class="container">
+        <div class="row">
+            <h1>Amet consectetur adipisicing elit, lorem ipsum dolor sit <br> When choosing, keep in mind tha  Hello world!!!</h1>
+        </div>
+    </div>
 
 
     <script src="script.js"></script>
