--- a/index.html
+++ b/index.html
@@ -69,9 +69,20 @@
     <div class="container">
         <div class="row">
             <h1>Amet consectetur adipisicing elit, lorem ipsum dolor sit <br> When choosing, keep in mind tha  Hello world!!!</h1>
+           <section> <button type="button" id="btn">Explore</button></section>
         </div>
     </div>
 
+    <!-- Page 2 -->
+
+    <div class="box">
+        <div class="rows">
+        <section class="col"></section>
+        <section class="col1"></section>
+        <section class="col2"></section>
+        <section class="col3"></section>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
