--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/87a66ec4e9.js"
         crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&family=Open+Sans:wght@300&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -42,12 +44,12 @@
             </a>
 
             <a href="">
-                <span><i class="fa-solid fa-person-chalkboard"></i></span>  
+                <span><i class="fa-solid fa-person-chalkboard"></i></span>
                 <li>Review</li>
             </a>
 
             <a href="">
-               <input type="button" value="Apply">
+                <input type="button" value="Apply">
             </a>
 
             <a href="" id="hello">
@@ -68,19 +70,44 @@
 
     <div class="container">
         <div class="row">
-            <h1>Amet consectetur adipisicing elit, lorem ipsum dolor sit <br> When choosing, keep in mind tha  Hello world!!!</h1>
-           <section> <button type="button" id="btn">Explore</button></section>
+            <h1>Amet consectetur adipisicing elit, lorem ipsum dolor sit <br>
+                When choosing, keep in mind tha Hello world!!!</h1>
+            <section> <button type="button" id="btn">Explore</button></section>
         </div>
     </div>
 
     <!-- Page 2 -->
 
     <div class="box">
+        <section><span>
+                <h2>Lorem Notice</h2>
+            </span></section>
         <div class="rows">
-        <section class="col"></section>
-        <section class="col1"></section>
-        <section class="col2"></section>
-        <section class="col3"></section>
+            <section class="col">
+                <i class="fa-solid fa-user-tie"></i>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Ducimus voluptate ipsam provident laborum voluptatibus
+                    temporibus necessitatibus!</p>
+            </section>
+            
+            <section class="col1">
+                <i class="fa-solid fa-user-tie"></i>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Ducimus voluptate ipsam provident laborum voluptatibus
+                    temporibus necessitatibus!</p>
+            </section>
+            <section class="col2">
+                <i class="fa-solid fa-user-tie"></i>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Ducimus voluptate ipsam provident laborum voluptatibus
+                    temporibus necessitatibus!</p>
+            </section>
+            <section class="col3">
+                <i class="fa-solid fa-user-tie"></i>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Ducimus voluptate ipsam provident laborum voluptatibus
+                    temporibus necessitatibus!</p>
+            </section>
         </div>
     </div>
 
