--- a/index.html
+++ b/index.html
@@ -85,28 +85,28 @@
         <div class="rows">
             <section class="col">
                 <i class="fa-solid fa-user-tie"></i>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                <p><kbd>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Ducimus voluptate ipsam provident laborum voluptatibus
-                    temporibus necessitatibus!</p>
+                    temporibus necessitatibus!</kbd></p>
             </section>
             
             <section class="col1">
                 <i class="fa-solid fa-user-tie"></i>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                <p><kbd>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Ducimus voluptate ipsam provident laborum voluptatibus
-                    temporibus necessitatibus!</p>
+                    temporibus necessitatibus!</kbd></p>
             </section>
             <section class="col2">
                 <i class="fa-solid fa-user-tie"></i>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                <p><kbd>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Ducimus voluptate ipsam provident laborum voluptatibus
-                    temporibus necessitatibus!</p>
+                    temporibus necessitatibus!</kbd></p>
             </section>
             <section class="col3">
                 <i class="fa-solid fa-user-tie"></i>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                <p><kbd>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Ducimus voluptate ipsam provident laborum voluptatibus
-                    temporibus necessitatibus!</p>
+                    temporibus necessitatibus!</kbd></p>
             </section>
         </div>
     </div>
