--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="row">
             <h1>Amet consectetur adipisicing elit, lorem ipsum dolor sit <br>
                 When choosing, keep in mind tha Hello world!!!</h1>
-            <section> <button type="button" id="btn">Explore</button></section>
+            <section> <button type="button" id="btn">Get Started</button></section>
         </div>
     </div>
 
@@ -111,7 +111,30 @@
         </div>
     </div>
 
+    <!-- 3 pages -->
+    <div class="map-page">
+        <section class="map-io"><img src="/img/Google_Maps_icon_(2020).svg.png" alt=""></section>
+        <section> <h3>
+            Welcome to
+            Foodme Maps Platform
+            See where real-world insights and location solutions can take your business.
+        </h3></section>
+        <div id="rows">
+            <section class="cols"></section>
+            <section class="cols"></section>
+            <section class="cols"></section>
+        </div>
+    </div>
+   
+  
+    <!--The div element for the map -->
+    <div id="map"></div>
+
     <script src="script.js"></script>
+    <script src=
+    "https://maps.googleapis.com/maps/api/js?key=<YOUR_API_KEY>&callback=initMap&libraries=&v=weekly"
+            async>
+        </script>
 </body>
 
 </html>
