--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <a href="#target">
                 <span><i class="fa-solid fa-location-dot"></i></span>
-                <li>Map</li>
+                <li>MapMe!</li>
             </a>
 
             <a href="">
@@ -45,7 +45,7 @@
 
             <a href="">
                 <span><i class="fa-solid fa-person-chalkboard"></i></span>
-                <li>Review</li>
+                <li>ReviewMe</li>
             </a>
 
             <a href="">
@@ -72,7 +72,8 @@
         <div class="row">
             <h1>Amet consectetur adipisicing elit, lorem ipsum dolor sit <br>
                 When choosing, keep in mind tha Hello world!!!</h1>
-            <section> <button type="button" id="btn">Get Started</button></section>
+            <section> <button type="button" id="btn">Get Started</button>
+            </section>
         </div>
     </div>
 
@@ -85,55 +86,65 @@
         <div class="rows">
             <section class="col">
                 <i class="fa-solid fa-user-tie"></i>
-                <p><kbd>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Ducimus voluptate ipsam provident laborum voluptatibus
-                    temporibus necessitatibus!</kbd></p>
+                <p><kbd>Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit.
+                        Ducimus voluptate ipsam provident laborum voluptatibus
+                        temporibus necessitatibus!</kbd></p>
             </section>
-            
+
             <section class="col1">
                 <i class="fa-solid fa-user-tie"></i>
-                <p><kbd>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Ducimus voluptate ipsam provident laborum voluptatibus
-                    temporibus necessitatibus!</kbd></p>
+                <p><kbd>Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit.
+                        Ducimus voluptate ipsam provident laborum voluptatibus
+                        temporibus necessitatibus!</kbd></p>
             </section>
             <section class="col2">
                 <i class="fa-solid fa-user-tie"></i>
-                <p><kbd>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Ducimus voluptate ipsam provident laborum voluptatibus
-                    temporibus necessitatibus!</kbd></p>
+                <p><kbd>Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit.
+                        Ducimus voluptate ipsam provident laborum voluptatibus
+                        temporibus necessitatibus!</kbd></p>
             </section>
             <section class="col3">
                 <i class="fa-solid fa-user-tie"></i>
-                <p><kbd>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Ducimus voluptate ipsam provident laborum voluptatibus
-                    temporibus necessitatibus!</kbd></p>
+                <p><kbd>Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit.
+                        Ducimus voluptate ipsam provident laborum voluptatibus
+                        temporibus necessitatibus!</kbd></p>
             </section>
         </div>
     </div>
 
     <!-- 3 pages -->
     <div class="map-page">
-        <section class="map-io"><img src="/img/Google_Maps_icon_(2020).svg.png" alt=""></section>
-        <section> <h3>
-            Welcome to
-            Foodme Maps Platform
-            See where real-world insights and location solutions can take your business.
-        </h3></section>
+        <section class="map-io"><img src="/img/Google_Maps_icon_(2020).svg.png"
+                alt=""></section>
+        <section>
+            <h3>
+                Welcome to <br>
+                Foodme Maps Platform
+            </h3>
+        </section>
+        <section>
+            <p> See where real-world insights and location solutions can take
+                your business.</p>
+        </section>
         <div id="rows">
             <section class="cols"></section>
             <section class="cols"></section>
             <section class="cols"></section>
         </div>
     </div>
-   
-  
+
+
     <!--The div element for the map -->
     <div id="map"></div>
 
     <script src="script.js"></script>
-    <script src=
-    "https://maps.googleapis.com/maps/api/js?key=<YOUR_API_KEY>&callback=initMap&libraries=&v=weekly"
-            async>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=<YOUR_API_KEY>&callback=initMap&libraries=&v=weekly"
+        async>
         </script>
 </body>
 
