--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
             <p> See where real-world insights and location solutions can take
                 your business.</p>
         </section>
+
+        <section class="map-in"><button type="button">Get Started</button></section>
         <div id="rows">
             <section class="cols"></section>
             <section class="cols"></section>
