--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
 
         <section class="map-in"><button type="button">Get Started</button></section>
         <div id="rows">
-            <section class="cols"></section>
-            <section class="cols"></section>
-            <section class="cols"></section>
+            <section class="cols"><iframe src="/video/homepage_m02_masonry-cards_why-google_2_video-bg-desktop.mp4" frameborder="0"></iframe></section>
+            <section class="cols"><img src="img/unnamed (1).webp" alt=""></section>
+            <section class="cols"><img src="img/unnamed.webp" alt=""></section>
         </div>
     </div>
 
