--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         <div class="row">
             <h1>Amet consectetur adipisicing elit, lorem ipsum dolor sit <br>
                 When choosing, keep in mind tha Hello world!!!</h1>
-            <section> <button type="button" id="btn">Get Started</button>
+            <section><a href=""> <button type="button" id="btn">Get
+                        Started</button></a>
             </section>
         </div>
     </div>
@@ -131,17 +132,70 @@
                 your business.</p>
         </section>
 
-        <section class="map-in"><button type="button">Get Started</button></section>
+        <section class="map-in"><a href=""><button type="button">Get
+                    Started</button></a></section>
         <div id="rows">
-            <section class="cols"><iframe src="/video/homepage_m02_masonry-cards_why-google_2_video-bg-desktop.mp4" frameborder="0"></iframe></section>
-            <section class="cols"><img src="img/unnamed (1).webp" alt=""></section>
-            <section class="cols"><img src="img/unnamed.webp" alt=""></section>
+            <section class="cols"><iframe
+                    src="/video/homepage_m02_masonry-cards_why-google_2_video-bg-desktop.mp4"
+                    frameborder="0"></iframe></section>
+            <section class="cols"><a href=""><img src="img/unnamed (1).webp"
+                        alt=""></a></section>
+            <section class="cols"><a href=""><img src="img/unnamed.webp"
+                        alt=""></a> </section>
         </div>
     </div>
 
+    <div class="article">
+        <section>
+            <p id="art">View the latest updates</p>
+        </section>
 
-    <!--The div element for the map -->
-    <div id="map"></div>
+
+        <div class="general-map">
+
+            <!-- Rooting -->
+            <section class="same">
+                <section class="blog-in">
+                    <a href="">
+                        <p>Blog</p><br><br>
+                        <p>New advance routing and <br>customization features
+                        </p>
+                    </a>
+                </section>
+                <section>
+                    <img src="img/photo-1486312338219-ce68d2c6f44d.avif" alt="">
+                </section>
+            </section>
+
+            <section class="same">
+                <section class="blog-out">
+                    <a href="">
+                        <p>Blog</p><br><br>
+                        <p>Explore <br>Elton's Gova LA takeover
+                            <br>customization features
+                        </p>
+                    </a>
+                </section>
+                <section>
+                    <img src="img/premium_photo-1663039880076-9e1834f30f42.avif"
+                        alt="">
+                </section>
+            </section>
+
+            <section class="same">
+                <section class="blog-off">
+                    <a href="">
+                        <p>HACKATHON</p><br><br>
+                        <p>Check out <br>the hackathon winners
+                        </p>
+                    </a>
+                </section>
+                <section>
+                    <img src="img/photo-1504384308090-c894fdcc538d.avif" alt="">
+                </section>
+            </section>
+        </div>
+    </div>
 
     <script src="script.js"></script>
     <script
