--- a/index.html
+++ b/index.html
@@ -259,6 +259,27 @@
         </div>
     </div>
 
+    <footer>
+        <div class="form-all">
+            <form action="">
+               <section> <input type="text" name="" id="" placeholder="First Name"></section><br>
+               <section><input type="text" id="" placeholder="Last Name"></section><br>
+               <section><input type="email" name="" id="" placeholder="Enter Email"></section><br>
+               <section><input type="text" id="" placeholder="Country"></section><br>
+               <section><input type="text" id="" placeholder="State"></section>br
+               <section><input type="text" id="" placeholder="Town/City"></section><br>
+               <section><input type="text" id="" placeholder="Postal code"></section><br>
+               <section><input type="date" name="" id=""></section><br>
+               <label for="">Passport</label>
+               <section>
+              <input type="file" name="" id=""></section><br>
+              <input type="submit" value="Submit">
+            </form>
+
+          
+        </div>
+    </footer>
+
     <script src="script.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=<YOUR_API_KEY>&callback=initMap&libraries=&v=weekly"
