--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <footer>
         <div class="form-all">
             <form action="">
-                <h1>Pending for the maintime</h1>
+                <h1 style="color: #fff;">Pending for the maintime</h1>
                <section> <input type="text" name="" id="" placeholder="First Name"></section><br>
                <section><input type="text" id="" placeholder="Last Name"></section><br>
                <section><input type="email" name="" id="" placeholder="Enter Email"></section><br>
