--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
         </div>
     </div>
 
+    <!--stoppppppp  -->
+
     <div class="article">
         <section>
             <p id="art">View the latest updates</p>
@@ -259,26 +261,14 @@
         </div>
     </div>
 
+    <div class="below">
+        <section class="map-io"><img src="/img/Google_Maps_icon_(2020).svg.png"
+            alt=""></section>
+<section><p>Get going with Foodme <br> Map Platform</p></section>
+<section><button type="button" id="button">Get started</button></section>
+    </div>
     <footer>
-        <div class="form-all">
-            <form action="">
-                <h1 style="color: #fff;">Pending for the maintime</h1>
-               <section> <input type="text" name="" id="" placeholder="First Name"></section><br>
-               <section><input type="text" id="" placeholder="Last Name"></section><br>
-               <section><input type="email" name="" id="" placeholder="Enter Email"></section><br>
-               <section><input type="text" id="" placeholder="Country"></section><br>
-               <section><input type="text" id="" placeholder="State"></section>br
-               <section><input type="text" id="" placeholder="Town/City"></section><br>
-               <section><input type="text" id="" placeholder="Postal code"></section><br>
-               <section><input type="date" name="" id=""></section><br>
-               <label for="">Passport</label>
-               <section>
-              <input type="file" name="" id=""></section><br>
-              <input type="submit" value="Submit">
-            </form>
-
-          
-        </div>
+      
     </footer>
 
     <script src="script.js"></script>
