--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
 
             <div class="footer-3">
                 <section>
-                    <p>Keep up with the latest</p>
+                    <p id="p">Keep up with the latest</p>
                 </section>
-                <section>
+                <section class="loop">
                     <p>Subscribe to the Foodme Vendors Platform newsletter today
                         to receive product updates, <br>insights, news, and
                         more.</p>
@@ -308,8 +308,31 @@
 
                 <form action="">
                   <section class="sec-1">
-
+                   <section> <input type="text" id="" placeholder="First name"></section>
+                   <section><input type="text" id="" placeholder="Last name"></section>
+                   <section><input type="text" id="" placeholder="Business name"></section> 
                   </section>
+
+                  <section class="sec-2">
+                    <section><input type="text" id="" placeholder="Company name"></section>
+                    <section><input type="text" id="" placeholder="Job title"></section>
+                    <section><input type="tel" name="" id="" placeholder="Phone"></section>
+                  </section>
+
+                  <section class="sec-3">
+                    <section><label for="">Select industry<input type="checkbox" id="" placeholder="Select industry"></label></section>
+                    <section><label for="">Select Country
+                        <input type="checkbox" placeholder="Select country"></label></section>
+                  </section>
+
+                  <section class="sec-3">
+                    <section><input type="checkbox"> <p>Yes, sign me up to receive communications from Google Maps Platform and Google Cloud.
+                    </p></section>
+
+                    <section><p>Your information will be used in accordance with Google's privacy policy. You may opt out at any time.</p></section>
+                  </section>
+
+                  <section><button type="button" id="btn">Subscribe</button></section>
                 </form>
             </div>
         </div>
