--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         </section>
 
         <div class="footer-2">
-            <section>
+            <section class="secp">
                 <section><a href="">
                         <p>Helpful links</p>
                     </a></section>
@@ -306,36 +306,54 @@
                         more.</p>
                 </section>
 
-                <form action="">
-                  <section class="sec-1">
-                   <section> <input type="text" id="" placeholder="First name"></section>
-                   <section><input type="text" id="" placeholder="Last name"></section>
-                   <section><input type="text" id="" placeholder="Business name"></section> 
-                  </section>
-
-                  <section class="sec-2">
-                    <section><input type="text" id="" placeholder="Company name"></section>
-                    <section><input type="text" id="" placeholder="Job title"></section>
-                    <section><input type="tel" name="" id="" placeholder="Phone"></section>
-                  </section>
-
-                  <section class="sec-3">
-                    <section><label for="">Select industry<input type="checkbox" id="" placeholder="Select industry"></label></section>
-                    <section><label for="">Select Country
-                        <input type="checkbox" placeholder="Select country"></label></section>
-                  </section>
-
-                  <section class="sec-3">
-                    <section><input type="checkbox"> <p>Yes, sign me up to receive communications from Google Maps Platform and Google Cloud.
-                    </p></section>
-
-                    <section><p>Your information will be used in accordance with Google's privacy policy. You may opt out at any time.</p></section>
-                  </section>
-
-                  <section><button type="button" id="btn">Subscribe</button></section>
-                </form>
             </div>
         </div>
+
+        <form action="">
+            <section class="sec-1">
+                <section> <input type="text" id="" placeholder="First name">
+                </section>
+                <section><input type="text" id="" placeholder="Last name">
+                </section>
+                <section><input type="text" id="" placeholder="Business name">
+                </section>
+            </section>
+
+            <section class="sec-2">
+                <section><input type="text" id="" placeholder="Company name">
+                </section>
+                <section><input type="text" id="" placeholder="Job title">
+                </section>
+                <section><input type="tel" name="" id="" placeholder="Phone">
+                </section>
+            </section>
+
+            <section class="sec-3">
+                <section><input type="text" id="" placeholder="Select industry">
+                </section>
+                <section>
+                    <input type="text" placeholder="Select country">
+                </section>
+            </section>
+            <section class="sec-4">
+                <section>
+                    <p>Yes, sign me up to receive communications from
+                        Google Maps Platform and Google Cloud.
+                    </p>
+                </section>
+
+                <section>
+                    <p>Your information will be used in accordance with
+                        Google's privacy policy. You may opt out at any
+                        time.</p>
+                </section>
+            </section>
+
+            <section><button type="button" id="btn">Subscribe</button>
+            </section>
+        </form>
+
+
     </footer>
 
 
