--- a/index.html
+++ b/index.html
@@ -311,25 +311,25 @@
 
         <form action="">
             <section class="sec-1">
-                <section> <input type="text" id="" placeholder="First name">
+                <section> <input type="text" id="firstname" placeholder="First name">
                 </section>
-                <section><input type="text" id="" placeholder="Last name">
+                <section><input type="text" id="lastname" placeholder="Last name">
                 </section>
-                <section><input type="text" id="" placeholder="Business name">
+                <section><input type="text" id="business" placeholder="Business name">
                 </section>
             </section>
 
             <section class="sec-2">
-                <section><input type="text" id="" placeholder="Company name">
+                <section><input type="text" id="companyname" placeholder="Company name">
                 </section>
-                <section><input type="text" id="" placeholder="Job title">
+                <section><input type="text" id="jobtitle" placeholder="Job title">
                 </section>
-                <section><input type="tel" name="" id="" placeholder="Phone">
+                <section><input type="tel" name="" id="mobileno" placeholder="Phone">
                 </section>
             </section>
 
             <section class="sec-3">
-                <section><input type="text" id="" placeholder="Select industry">
+                <section><input type="text" id="country" placeholder="Select industry">
                 </section>
                 <section>
                     <input type="text" placeholder="Select country">
