--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                 <section class="blog-in">
                     <a href="">
                         <p>Blog</p><br><br>
-                        <p>New advance routing and <br>customization features
-                        </p>
+                        <main>New advance routing and <br>customization features
+                        </main>
 
                 </section>
                 <section>
@@ -173,10 +173,10 @@
             <section class="same">
                 <section class="blog-out">
                     <a href="">
-                        <p>Blog</p><br><br>
-                        <p>Explore <br>Elton's Gova LA takeover
+                        <p>Market</p><br><br>
+                        <main>Explore <br>Elton's Gova LA takeover
                             <br>customization features
-                        </p>
+                        </main>
 
                 </section>
                 <section>
@@ -190,8 +190,8 @@
                 <section class="blog-off">
                     <a href="">
                         <p>HACKATHON</p><br><br>
-                        <p>Check out <br>the hackathon winners
-                        </p>
+                        <main>Check out <br>the hackathon winners
+                        </main>
 
                 </section>
                 <section>
@@ -311,25 +311,32 @@
 
         <form action="">
             <section class="sec-1">
-                <section> <input type="text" id="firstname" placeholder="First name">
+                <section> <input type="text" id="firstname"
+                        placeholder="First name">
                 </section>
-                <section><input type="text" id="lastname" placeholder="Last name">
+                <section><input type="text" id="lastname"
+                        placeholder="Last name">
                 </section>
-                <section><input type="text" id="business" placeholder="Business name">
+                <section><input type="text" id="business"
+                        placeholder="Business name">
                 </section>
             </section>
 
             <section class="sec-2">
-                <section><input type="text" id="companyname" placeholder="Company name">
+                <section><input type="text" id="companyname"
+                        placeholder="Company name">
                 </section>
-                <section><input type="text" id="jobtitle" placeholder="Job title">
+                <section><input type="text" id="jobtitle"
+                        placeholder="Job title">
                 </section>
-                <section><input type="tel" name="" id="mobileno" placeholder="Phone">
+                <section><input type="tel" name="" id="mobileno"
+                        placeholder="Phone">
                 </section>
             </section>
 
             <section class="sec-3">
-                <section><input type="text" id="country" placeholder="Select industry">
+                <section><input type="text" id="country"
+                        placeholder="Select industry">
                 </section>
                 <section>
                     <input type="text" placeholder="Select country">
